// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingPlaceholder /> should render 1`] = `
<LoadingPlaceholder__StyledLoadingPlaceholder>
  <Loader />
</LoadingPlaceholder__StyledLoadingPlaceholder>
`;

exports[`<LoadingPlaceholder /> should render the provided message 1`] = `
<LoadingPlaceholder__StyledLoadingPlaceholder>
  <p>
    Test Message
  </p>
  <Loader />
</LoadingPlaceholder__StyledLoadingPlaceholder>
`;
